--- a/public/index.html
+++ b/public/index.html
@@ -59,12 +59,12 @@
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
+ -->
   <!-- Custom scripts for this template -->
-  <script src="js/creative.min.js"></script>
+  <!-- <script src="js/creative.min.js"></script> -->
 
   </body>
 </html>
